# git-autocommit

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/: README.md
.github/scripts/: apply_large_context.py  configure_large_change_policy.py
.github/workflows/: apply-large-context-fix.yml  apply-large-context-pr.yml  ci.yml  configure-large-change-policy.yml  fix-binary-budget.yml  fix-evidence-budget.yml  release.yml
docs/: large-change-context.md  nix.md
man/: git-autocommit.1
prompts/: plan.md  system.md
src/: main.rs
