[package]
name = "git-autocommit"
version = "0.1.0"
edition = "2024"
description = "AI-assisted Git utility for atomic, signed Conventional Commits"
license = "Apache-2.0"
repository = "https://github.com/ryjen/git-autocommit"
readme = "README.md"
keywords = ["git", "conventional-commits", "llm", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
